crates/ladder_types/tests/ui/generated/should_fail/test__unary_wrapper_ladder__R0_minus_R3.rs

use ladder_types::unary_wrapper_ladder::*;

fn main() {
   let _ = R0::new() - R3::new();
}
